@@ -1,1 +1,1 @@
-select l_orderkey, avg(l_discount) as revenue from lineitem group by l_orderkey;
+select l_orderkey, avg(l_discount) as revenue from lineitem group by l_orderkey order by l_orderkey;
