@@ -1,1 +1,8 @@
-select name, addr, count(1) from table1 group by name, addr;
+select
+  name, addr, count(1)
+from
+  table1
+group by
+  name, addr
+order by
+  name, addr;
