@@ -1,1 +1,9 @@
-select addr, count(*) from table1 group by addr;
+select
+  addr,
+  count(*)
+from
+  table1
+group by
+  addr
+order by
+  addr;
