@@ -1,5 +1,5 @@
 l_orderkey,revenue
 -------------------------------
 1,0.065
-3,0.08
 2,0.0
+3,0.08
