@@ -1,7 +1,7 @@
 c_custkey,o_orderkey,cnt
 -------------------------------
 1,1,1
-3,3,1
 2,2,1
+3,3,1
 4,0,1
 5,0,1
