@@ -1,5 +1,5 @@
 l_orderkey,total,num
 -------------------------------
-1,1.0,3
 3,2.5,3
+1,1.0,3
 2,2.0,1
