@@ -5,11 +5,11 @@ v1,n_regionkey,r_regionkey,plus1,plus2,result
 4,1,1,2,2,1
 8,4,4,8,8,4
 9,3,3,6,6,3
-10,3,3,6,6,3
 10,2,2,4,4,2
+10,3,3,6,6,3
 11,2,2,4,4,2
-14,4,4,8,8,4
 14,2,2,4,4,2
+14,4,4,8,8,4
 15,4,4,8,8,4
 17,4,4,8,8,4
 18,1,1,2,2,1
@@ -17,6 +17,6 @@ v1,n_regionkey,r_regionkey,plus1,plus2,result
 22,3,3,6,6,3
 23,2,2,4,4,2
 24,4,4,8,8,4
-25,3,3,6,6,3
 25,1,1,2,2,1
+25,3,3,6,6,3
 26,3,3,6,6,3
