@@ -5,8 +5,8 @@ v1,n_regionkey,r_regionkey,plus1,plus2,result,total
 4,1,1,2,2,1,2
 8,4,4,8,8,4,8
 9,3,3,6,6,3,6
-10,3,3,6,6,3,6
 10,2,2,4,4,2,4
+10,3,3,6,6,3,6
 11,2,2,4,4,2,4
 14,2,2,4,4,2,4
 14,4,4,8,8,4,8
