@@ -1,7 +1,7 @@
 name,addr,?count
 -------------------------------
+ooo,127.0.0.1,1
 ppp,127.0.1.1,1
 qqq,127.0.0.8,1
-xxx,127.0.1.1,1
-ooo,127.0.0.1,1
 rrr,127.0.0.1,1
+xxx,127.0.1.1,1
