@@ -215,17 +215,7 @@ public class LazyTuple implements Tuple, Cloneable {
 
   @Override
   public int hashCode() {
-    int hashCode = 37;
-    for (int i = 0; i < values.length; i++) {
-      Datum d = get(i);
-      if (d != null) {
-        hashCode ^= (d.hashCode() * 41);
-      } else {
-        hashCode = hashCode ^ (i + 17);
-      }
-    }
-
-    return hashCode;
+    return Arrays.hashCode(values);
   }
 
   @Override
